--- a/cp5prototype.html
+++ b/cp5prototype.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">  
     <link href="css/style2.css" rel="stylesheet">
 </head>
     <body>
-        <h1>Hello!</h1>
-        <p><img src="images/Waving.png"></p>
-        <p>How're you doing today?</p>
-        <p>It's always good to check in with yourself periodically.</p>
-        <p><a href="www.linkedin.com/in/kaitlyn-chalker-7b04151b6/">LinkedIn</a></p>
+        <main class="container">
+            <section class="col-8 offset-2">
+                <div class="row">
+                    <h1>Hello!</h1>
+                    <p><img src="images/Waving.png"></p>
+                    <p>How're you doing today?</p>
+                    <p>It's always good to check in with yourself periodically.</p>
+                    <p><a href="www.linkedin.com/in/kaitlyn-chalker-7b04151b6/">LinkedIn</a></p>
+                </div>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/d-diB65scQU" allowfullscreen></iframe>
+                  </div>
+            </section>
+        </main>
     </body>
     </html>
