--- a/learningtargetj1.html
+++ b/learningtargetj1.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My HTML Page</title>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
   <section id="top">
