--- a/index.html
+++ b/index.html
@@ -5,4 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Designing My Next Five Years</title>
       <link href="css/style.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+      <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@500&display=swap" rel="stylesheet">
 </head>
+<body>
+  <div class="container-fluid">
+    <h1 class="text-center display-1">My Next Five Years <br></h1>   
+    <div class="row">
+      <div class="col-sm-6">
+        <p><img src="images/Tennis.jpg" class="img-fluid" alt="Tennis"></p>
+        <p class="text-center">My entire life, I've lived in Cobb County, a suburb of Atlanta, Georgia. When I was four, I moved from East Cobb to West Cobb and have lived at the base of the Civil War battlefield, Kennesaw Mountain, ever since.</p>
+        <p><img src="images/Kennesaw Mountain.jpg" class="img-fluid" alt="Kennesaw Mountain"></p>
+        <p class="text-center">After completing my undergraduate degree at W&L, my next goal is to be accepted at Harvard law school. If I accomplish this goal, in five years, I will be in my second year of law school at Harvard.</p>
+      </div>
+      <div class="col-sm-6">
+        <p class="text-center">My name is Kaitlyn Chalker and I'm a member of the class of 2024 at Washington and Lee University. I'm on the women's varsity tennis team here at W&L and I'm a part of the LEAD program.</p>
+        <p><img src="images/Cobb County.png" class="img-fluid" alt="Cobb County"></p>
+        <p class="text-center">Growing up by Kennesaw Mountain was what first sparked my interest in history. That interest was further fostered by my dad who is a history buff. Now, I love history so much that it is my intended major at W&L.</p>
+        <p><img src="images/Harvard.jpg" class="img-fluid" alt="Harvard"></p>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
